# Mini-FT8

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build.ps1  build_and_flash.bat  build_and_flash.py  build_fix.bat  build_log.txt  build_log2.txt  dobuild.cmd  partitions.csv  real_build.bat  sdkconfig
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: ftx1-hcd-channel-exhaustion.md  knowledge-base.md
.planning/debug/resolved/: fatfs-station-txt-persistent-failure.md  ft8-slot-boundary-rtc-timing.md  ftx1-beacon-arm-status-hang.md  ftx1-hcd-channel-exhaustion-halfduplex.md  ftx1-hcd-channel-exhaustion.md  ftx1-speaker-24bit-rejected.md  ftx1-tx-audio-silent.md  sd-station-txt-overwrite.md
.planning/phases/01-backend-vtable-plumbing/: 01-01-PLAN.md  01-01-SUMMARY.md  01-PATTERNS.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-cp210x-usb-bring-up-cat-connection/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-PATTERNS.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-cat-command-implementation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW.md  03-VERIFICATION.md
.planning/phases/04-bidirectional-uac-audio-negotiation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md
.planning/phases/05-end-to-end-integration-and-parity-testing/: 05-01-PLAN.md  05-02-PLAN.md
.planning/quick/20260708-manual-slot-sync/: PLAN.md  SUMMARY.md
.planning/quick/20260708-qso-log-combined-view/: PLAN.md  SUMMARY.md
.planning/quick/20260708-snr-display/: PLAN.md  SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/pending/: 20260708-ftx1-connect-force-vfo-mode.md  20260708-wifi-ntp-qrz-upload.md
components/M5Cardputer/: CMakeLists.txt
components/M5Cardputer/src/: M5Cardputer.cpp  M5Cardputer.h
components/M5Cardputer/src/utility/Adafruit_TCA8418/: Adafruit_TCA8418.cpp  Adafruit_TCA8418.h
components/M5Cardputer/src/utility/Keyboard/: Keyboard.cpp  Keyboard.h
components/M5Cardputer/src/utility/Keyboard/KeyboardReader/: TCA8418.cpp
components/board_cardputer_adv/: CMakeLists.txt  board_audio.cpp  board_i2c.cpp
components/board_cardputer_adv/include/: board_audio.h  board_i2c.h  board_pins.h  board_power.h
components/external_rtc/: CMakeLists.txt  external_rtc.cpp
components/external_rtc/include/: external_rtc.h
components/ft8_lib/common/: monitor.c  monitor.h
components/storage_service/: CMakeLists.txt  idf_component.yml  storage_service.cpp
components/storage_service/include/: storage_service.h
components/ui/: ui.cpp
components/ui/include/: ui.h
docs/: ARCHITECTURE.md  AUTOSEQ_INACTIVE_QUEUE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  OPERATION_MODES.md  RTC_COMPENSATION.md  TESTING.md
host_mock/: host_main.cpp  json_parser.cpp  json_parser.h  test_adif_enqueue_retry.json  test_freetext.json
main/: CMakeLists.txt  audio_source.cpp  audio_source.h  autoseq.cpp  autoseq.h  ble_native.cpp  ble_native.h  core_api.cpp  dds_q15.cpp  dds_q15.h  feature_flags.h  ft8_audio_pipeline.cpp  ft8_audio_pipeline.h  gps.cpp  gps.h  idf_component.yml  kh1_tone_map.h  main.cpp  protocol.h  radio_control.cpp  radio_control.h  radio_control_backend.h  radio_control_ftx1.cpp  radio_control_kh1_cat.cpp  radio_control_qmx.cpp  station_types.h  stream_mic.cpp  stream_mic.h  stream_uac.cpp  stream_uac.h  test_tone_lut.h
test_apps/cardputer_adv_audio_keyboard/: CMakeLists.txt
test_apps/cardputer_adv_audio_keyboard/main/: CMakeLists.txt  idf_component.yml  main.cpp
tests/tx_e2e/: CMakeLists.txt  decode_helper.cpp  decode_helper.h  gen_golden.cpp  synth.c  synth.h  test_golden_rx.cpp  test_kh1_tone_map.cpp  test_l1_encoder.cpp  test_l2_state_machine.cpp  test_l3_tx_poll_timing.cpp  test_l4_tx_timer_isolation.cpp  test_ta_format.cpp  test_wav_diag.cpp  timing_sim.h  tx_state_machine.cpp  tx_state_machine.h
tests/tx_e2e/golden/: MANIFEST.txt
tools/: Station.txt  check_dram_budget.py  gen_test_tone_lut.py
